designing buttons and logo centering and size

--- a/index.html
+++ b/index.html
@@ -35,12 +35,13 @@
     <main>
           <section id="landingpage">
              <div class="full-width">
-                  <img src="img/landingpage_logo.png" alt="page_logo" width=20% />
-                  <h1> DE-EN-POR-ES Translations - Author - Proofread - Editing </h1>
-                  <button class="button" onclick="location.href='#services';"> services </button>
-                  <button class="button" onclick="location.href='#contact';"> get in touch </button>
+                  <img src="img/landingpage_logo.png" alt="page_logo"  />
+                  <div id="landingpage_userengagement">
+                      <h1> DE-EN-POR-ES Translations - Author - Proofread - Editing </h1>
+                      <button class="button first_level_button" onclick="location.href='#services';"> services </button>
+                      <button class="button second_level_button" onclick="location.href='#contact';"> get in touch </button>
+                  </div>
              </div>
-
           </section>
 
           <!--- FOOTER -->
