--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
              <div class="full-width">
                   <img src="img/landingpage_logo.png" alt="page_logo"  />
                   <div id="landingpage_userengagement">
-                      <h1> DE-EN-POR-ES Translations - Author - Proofread - Editing </h1>
+                      <h1> Proofread <br> - <br> Editing <br> - <br> Author <br> - <br> ES-POR-DE Translations </h1>
                       <button class="button first_level_button" onclick="location.href='#services';"> services </button>
                       <button class="button second_level_button" onclick="location.href='#contact';"> get in touch </button>
                   </div>
@@ -47,13 +47,13 @@
           <!--- FOOTER -->
           <footer id="copyright">
               <div class="full-width">
-                  <img id="chamaeleon_footer" src="img/chamaeleon.png" alt="chamaleon_simbol" width=120px />
+                  <img id="chamaeleon_footer" src="img/chamaeleon.png" alt="chamaleon_simbol" />
                   <div id="social_media_links">
                       <ul>
-                          <li> <a href="https://www.facebook.com/theresa.mannschatz"> <img src="img/facebook_icon.png" alt="facebook_logo" width=100%> </a> </li>
-                          <li> <a href="mailto:contact@theresamannschatz.design"> <img src="img/gmail_icon.png" alt="gmail_logo" width=100%> </a> </li>
-                          <li> <a href="https://wa.me/4915124045227"> <img src="img/icon_whatsapp.png" alt="whatsapp_logo" width=100%> </a> </li>
-                          <li> <a href="https://www.facebook.com/theresa.mannschatz"> <img src="img/linkedin_icon.png" alt="linkedin_icon" width=100%> </a> </li>
+                          <li> <a href="https://www.facebook.com/theresa.mannschatz"> <img src="img/facebook_icon.png" alt="facebook_logo"> </a> </li>
+                          <li> <a href="mailto:contact@theresamannschatz.design"> <img src="img/gmail_icon.png" alt="gmail_logo"> </a> </li>
+                          <li> <a href="https://wa.me/4915124045227"> <img src="img/icon_whatsapp.png" alt="whatsapp_logo"> </a> </li>
+                          <li> <a href="https://www.facebook.com/theresa.mannschatz"> <img src="img/linkedin_icon.png" alt="linkedin_icon"> </a> </li>
                       </ul>
                   </div>
                   <p> Copyright Theresa Mannschatz 2018 </p>
