adding language selection logos to nav bar

--- a/index.html
+++ b/index.html
@@ -13,19 +13,28 @@
 <body>
     <header>
       <div class="full-width">
-        <div class="third-width">
+        <div class="one-fifth-width">
             <div>
                 <img id="logo" src="img/logo.png" alt="logo_yvonne_miller_langaugeservices">
             </div>
         </div>
-        <div class="two-third-width">
+        <div class="two-fifth-width">
+            <div id="language_selection">
+                <ul>
+                    <li> <a href=#german>  <img src="img/german-flag.png" alt="german_logo" width=30> </a> </li>
+                    <li> <a href=#portuguese> <img src="img/portuguese_flag.png" alt="portuguese_logo" width=30> </a> </li>
+                    <li> <a href=#spanish> <img src="img/spanish_flag.png" alt="spanish_logo" width=30 > </a> </li>
+                </ul>
+            </div>
+        </div>
+        <div class="two-fifth-width">
             <div id="nav_bar">
                 <nav>
                   <ul>
-                    <li> <a href=#about> about </a> </li>
-                    <li> <a href=#services> services </a> </li>
-                    <li> <a href=#prices> prices </a> </li>
-                    <li> <a href=#contact> contact </a> </li>
+                    <li> <a href=#about> über mich </a> </li>
+                    <li> <a href=#services> angebote </a> </li>
+                    <li> <a href=#prices> preise </a> </li>
+                    <li> <a href=#contact> kontakt </a> </li>
                   </ul>
                 </nav>
             </div>
@@ -36,8 +45,10 @@
           <section id="landingpage">
              <div class="full-width">
                   <img src="img/landingpage_logo.png" alt="page_logo"  />
+                  <div id="landingpage_objectives">
+                      <h1> Proofread <br> - <br> Editing <br> - <br> Author <br> - <br> ES-PT-DE <br> Translations </h1>
+                  </div>
                   <div id="landingpage_userengagement">
-                      <h1> Proofread <br> - <br> Editing <br> - <br> Author <br> - <br> ES-POR-DE Translations </h1>
                       <button class="button first_level_button" onclick="location.href='#services';"> services </button>
                       <button class="button second_level_button" onclick="location.href='#contact';"> get in touch </button>
                   </div>
