readme file added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="full-width">
         <div class="one-fifth-width">
             <div>
-                <img id="logo" src="img/logo.png" alt="logo_yvonne_miller_langaugeservices">
+                <img id="logo" src="img/logo.svg" alt="logo_yvonne_miller_langaugeservices">
             </div>
         </div>
         <div class="two-fifth-width">
