styling mobile header - draft

--- a/index.html
+++ b/index.html
@@ -4,47 +4,52 @@
 
     <head>
         <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> <!-- needed for responsive web design -->
+        <link rel="manifest" href="site.webmanifest">
+        <link rel="apple-touch-icon" href="icon.png">
+        <!-- Place favicon.ico in the root directory -->
+
         <title>Yvonne Miller | Language Services </title>
+        <!-- CSS styles -->
         <link rel="stylesheet" href="css/main.css"/>
         <link rel="stylesheet" href="css/normalize.css"/>
+        <!-- Google fonts -->
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900|Open+Sans:400,600,700,800|Roboto+Slab:400,700|Source+Sans+Pro:300,400,700,900|Source+Serif+Pro:400,600,700|Titillium+Web:300,400,600,700,900" rel="stylesheet">
     </head>
 
 <body>
     <header>
-      <div class="full-width">
-        <div class="one-fifth-width">
-            <div>
-                <img id="logo" src="img/logo.svg" alt="logo_yvonne_miller_langaugeservices">
-            </div>
-        </div>
-        <div class="two-fifth-width">
-            <div id="language_selection">
+        <div class="content-wrapper">
+            <figure id="logo">
+                <img src="img/logo.svg" alt="logo-yvonne-miller-langauge-services">
+            </figure>
+            <div class="header-divider"> </div>
+            <div class="langauge-selector">
                 <ul>
-                    <li> <a href=#german>  <img src="img/german-flag.png" alt="german_logo" width=30> </a> </li>
-                    <li> <a href=#portuguese> <img src="img/portuguese_flag.png" alt="portuguese_logo" width=30> </a> </li>
-                    <li> <a href=#spanish> <img src="img/spanish_flag.png" alt="spanish_logo" width=30 > </a> </li>
+                    <li> <a href=#german> <figure class="lang-sel-flag"> <img src="img/german-flag.png" alt="german-flag">  </figure> </a> </li>
+                    <li> <a href=#portuguese> <figure class="lang-sel-flag"> <img src="img/portuguese-flag.png" alt="portuguese-flag"> </figure> </a> </li>
+                    <li> <a href=#spanish> <figure class="lang-sel-flag"> <img src="img/spanish-flag.png" alt="spanish-flag"> </figure> </a> </li>
                 </ul>
             </div>
-        </div>
-        <div class="two-fifth-width">
-            <div id="nav_bar">
-                <nav>
-                  <ul>
-                    <li> <a href=#about> über mich </a> </li>
-                    <li> <a href=#services> angebote </a> </li>
-                    <li> <a href=#prices> preise </a> </li>
-                    <li> <a href=#contact> kontakt </a> </li>
-                  </ul>
-                </nav>
-            </div>
-        </div>
-      </div>
+            <nav>
+                <ul>
+                    <li> <a href=#about> Über mich </a> </li>
+                    <li> <a href=#services> Angebote </a> </li>
+                    <li> <a href=#prices> Preise </a> </li>
+                     <li> <a href=#contact> Kontakt </a> </li>
+                </ul>
+            </nav>
+        </div> <!-- end content wrapper -->
     </header>
+
+
+
     <main>
           <section id="landingpage">
              <div class="full-width">
-                  <img src="img/landingpage_logo.png" alt="page_logo"  />
+                  <img src="img/landingpage-logo.png" alt="page-logo"  />
                   <div id="landingpage_objectives">
                       <h1> Proofread <br> - <br> Editing <br> - <br> Author <br> - <br> ES-PT-DE <br> Translations </h1>
                   </div>
