hero image and overview of services set

--- a/index.html
+++ b/index.html
@@ -47,23 +47,24 @@
 
 
     <main>
-          <section id="landingpage">
-             <div class="full-width">
-                  <img src="img/landingpage-logo.png" alt="page-logo"  />
-                  <div id="landingpage_objectives">
-                      <h1> Proofread <br> - <br> Editing <br> - <br> Author <br> - <br> ES-PT-DE <br> Translations </h1>
+          <section class="hero-image">
+             <div class="content-wrapper">
+                  <div>
+                      <h1> Redaktion <br> - <br> Korrektorat <br> - <br> Autorin <br> - <br> Übersetzungen <br> - <br> Unterricht </h1>
                   </div>
-                  <div id="landingpage_userengagement">
-                      <button class="button first_level_button" onclick="location.href='#services';"> services </button>
-                      <button class="button second_level_button" onclick="location.href='#contact';"> get in touch </button>
-                  </div>
+                  <figure>
+                        <img src="img/landingpage-logo.png" alt="page-logo">
+                  </figure>
+             </div> <!-- end content wrapper  -->
+             <div class="user-engagement">
+                  <button class="btn-first-level" onclick="location.href='#services';"> services </button>
+                  <button class="btn-sec-level" onclick="location.href='#contact';"> get in touch </button>
              </div>
           </section>
 
           <!--- FOOTER -->
           <footer id="copyright">
               <div class="full-width">
-                  <img id="chamaeleon_footer" src="img/chamaeleon.png" alt="chamaleon_simbol" />
                   <div id="social_media_links">
                       <ul>
                           <li> <a href="https://www.facebook.com/theresa.mannschatz"> <img src="img/facebook_icon.png" alt="facebook_logo"> </a> </li>
@@ -72,7 +73,8 @@
                           <li> <a href="https://www.facebook.com/theresa.mannschatz"> <img src="img/linkedin_icon.png" alt="linkedin_icon"> </a> </li>
                       </ul>
                   </div>
-                  <p> Copyright Theresa Mannschatz 2018 </p>
+                  <p> Copyright @ TheresaMannschatz.design 2019 </p>
+                  <img id="chamaeleon_footer" src="img/chamaeleon.png" alt="chamaleon_simbol" />
               </div>
           </footer>
     </main>
