subsitute br with hr for the horizontal lines on hero image

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <section class="hero-image">
              <div class="content-wrapper">
                   <div>
-                      <h1> Redaktion <br> - <br> Korrektorat <br> - <br> Autorin <br> - <br> Übersetzungen <br> - <br> Unterricht </h1>
+                      <h1> Redaktion <hr> Korrektorat <hr> Autorin <hr> Übersetzungen <hr> Unterricht </h1>
                   </div>
                   <figure>
                         <img src="img/landingpage-logo.png" alt="page-logo">
