style mobile version buttons

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                   </figure>
              </div> <!-- end content wrapper  -->
              <div class="user-engagement">
-                  <button class="btn-first-level" onclick="location.href='#services';"> services </button>
-                  <button class="btn-sec-level" onclick="location.href='#contact';"> get in touch </button>
+                  <button class="btn btn-first-level" onclick="location.href='#services';"> angebot </button>
+                  <button class="btn btn-sec-level" onclick="location.href='#contact';"> kontakt </button>
              </div>
           </section>
 
@@ -79,6 +79,18 @@
           </footer>
     </main>
 
+    <script src="js/vendor/modernizr-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
+
+    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+    <script>
+      window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+      ga('create', 'UA-XXXXX-Y', 'auto'); ga('send', 'pageview')
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async defer></script>
 </body>
 
 </html>
