--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
         <div class="content-wrapper">
             <figure id="logo">
-                <img src="img/logo.svg" alt="logo-yvonne-miller-langauge-services">
+                <img src="img/logo.eps" alt="logo-yvonne-miller-langauge-services">
             </figure>
             <div class="header-divider"> </div>
             <div class="langauge-selector">
