style welcome section mobile and desktop

--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@
              </div>
           </section>
 
+          <section class="welcoming">
+              <div class="content-wrapper">
+                  <p>
+                      <span class="highlight-text">Hallo, ich bin Yvonne </span> providing you with different writer services such as portuguese, spanish to German translations, …  Vestibulum rutrum quam vitae fringilla tincidunt. Suspendisse nec tortor urna. Ut laoreet sodales nisi, quis iaculis nulla iaculis vitae. Donec sagittis faucibus lacus eget blandit. Mauris vitae ultricies metus.
+                  </p>
+                  <figure>
+                      <img src="img/portrait.png" alt="head-shoot">
+                  </figure>
+              </div>
+          </section>
+
           <!--- FOOTER -->
           <footer id="copyright">
               <div class="full-width">
