style service section for mobile and desktop

--- a/index.html
+++ b/index.html
@@ -73,6 +73,63 @@
               </div>
           </section>
 
+
+          <!-- ANGEBOT section -->
+          <section class="services-section">
+              <div class="content-wrapper">
+                  <h2> Angebot </h2>
+                  <p> Asagittis faucibus lacus eget blandit. Mauris vitae ultricies </p>
+                  <div class="services-detail-wrapper">
+                      <div class="services-item">
+                          <figure>
+                              <img src="img/redaktion-icon.png" alt="redaktion-icon">
+                          </figure>
+                          <p> <span class="highlight-text-bold"> Redaktion </p>
+                      </div> <!-- end services-item wrapper -->
+
+                      <div class="services-item">
+                          <figure>
+                              <img src="img/author-icon.png" alt="author-icon">
+                          </figure>
+                          <p> <span class="highlight-text-bold"> Korrektorat </span> </p>
+                      </div> <!-- end services-item wrapper -->
+
+                      <div class="services-item">
+                          <figure>
+                              <img src="img/ghostwriter-icon.png" alt="ghostwriter-icon">
+                          </figure>
+                          <p> <span class="highlight-text-bold"> Autorin </span> </p>
+                          <p> <span class="highlight-text-bold"> Ghostwriterin </span> </p>
+                      </div> <!-- end services-item wrapper -->
+
+                      <div class="services-item">
+                          <figure>
+                              <img src="img/translations-icon.png" alt="translations-icon">
+                          </figure>
+                          <p> <span class="highlight-text-bold"> Übersetzungen: </span> </p>
+                          <div class="text-wrapper">
+                              <p class="add-spacer"> Portugiesisch, </p>
+                              <p class="add-spacer"> Spanisch, </p>
+                              <p> Deutsch </p>
+                          </div> <!-- end text wrapper -->
+                      </div> <!-- end services-item wrapper -->
+
+                      <div class="services-item">
+                          <figure>
+                              <img src="img/teaching-icon.png" alt="teaching-icon">
+                          </figure>
+                          <p> <span class="highlight-text-bold"> Sprachunterricht </span></p>
+                          <div class="text-wrapper">
+                                <p class="add-spacer"> Deutsch, </p>
+                                <p class="add-spacer"> Portugiesisch, </p>
+                                <p> Spanisch </p>
+                          </div> <!-- end text wrapper -->
+                      </div> <!-- end services-item wrapper -->
+
+                  </div> <!-- end services-detail-wrapper -->
+              </div> <!-- end content wrapper -->
+          </section>
+
           <!--- FOOTER -->
           <footer id="copyright">
               <div class="full-width">
