adding copyright and logo to footer

--- a/index.html
+++ b/index.html
@@ -141,8 +141,12 @@
                           <li> <a href="https://www.facebook.com/theresa.mannschatz"> <img src="img/linkedin_icon.png" alt="linkedin_icon"> </a> </li>
                       </ul>
                   </div>
-                  <p> Copyright @ TheresaMannschatz.design 2019 </p>
-                  <img id="chamaeleon_footer" src="img/chamaeleon.png" alt="chamaleon_simbol" />
+                  <div class="footer-container">
+                      <p> Copyright @ Theresa Mannschatz 2019 </p>
+                      <figure>
+                        <img id="chamaeleon-footer-brand" src="img/chamaeleon.png" alt="chamaleon-symbol-footer">
+                      </figure>
+                  </div> <!-- end footer container -->
               </div>
           </footer>
     </main>
