designed testimonial section

--- a/index.html
+++ b/index.html
@@ -130,6 +130,20 @@
               </div> <!-- end content wrapper -->
           </section>
 
+          <!-- testimonial section -->
+          <section class="testimonial-section">
+              <div class="content-wrapper">
+                  <div class="testemonie-pic">
+                      <figure>
+                          <img src="img/testimon-general.png" alt="">
+                      </figure>
+                  </div>
+                  <div class="testemonie-text">
+                      <p> Vestibulum rutrum quam vitae fringilla tincidunt. Suspendisse nec tortor urna. Ut laoreet sodales nisi, quis iaculis nulla iaculis vitae. </p>
+                  </div>
+              </div>
+          </section>
+
           <!--- FOOTER -->
           <footer id="copyright">
               <div class="full-width">
