add testimonial slider buttons

--- a/index.html
+++ b/index.html
@@ -138,9 +138,14 @@
                           <img src="img/testimon-general.png" alt="">
                       </figure>
                   </div>
-                  <div class="testemonie-text">
-                      <p> Vestibulum rutrum quam vitae fringilla tincidunt. Suspendisse nec tortor urna. Ut laoreet sodales nisi, quis iaculis nulla iaculis vitae. </p>
-                  </div>
+                  <div class="slider-wrapper">
+                      <div class="triangle-left"> </div>
+                      <div class="testemonie-text">
+                          <p> Vestibulum rutrum quam vitae fringilla tincidunt. Suspendisse nec tortor urna. Ut laoreet sodales nisi, quis iaculis nulla iaculis vitae. </p>
+                          <p class="font-client"> Real Spot Company </p>
+                      </div>
+                      <div class="triangle-right"> </div>
+                  </div> <!-- end slider wrapper -->
               </div>
           </section>
 
