left sliding works

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="apple-touch-icon" href="icon.png">
         <!-- Place favicon.ico in the root directory -->
 
-        <title>Yvonne Miller | Language Services </title>
+        <title>Yvonne Miller | Sprach-Services </title>
         <!-- CSS styles -->
         <link rel="stylesheet" href="css/main.css"/>
         <link rel="stylesheet" href="css/normalize.css"/>
@@ -139,12 +139,12 @@
                       </figure>
                   </div>
                   <div class="slider-wrapper">
-                      <div class="triangle-left"> </div>
+                      <div id="triangle-left"> </div>
                       <div class="testemonie-text">
-                          <p> Vestibulum rutrum quam vitae fringilla tincidunt. Suspendisse nec tortor urna. Ut laoreet sodales nisi, quis iaculis nulla iaculis vitae. </p>
+                          <p id="testemonial-content"> Vestibulum rutrum quam vitae fringilla tincidunt. Suspendisse nec tortor urna. Ut laoreet sodales nisi, quis iaculis nulla iaculis vitae. </p>
                           <p class="font-client"> Real Spot Company </p>
                       </div>
-                      <div class="triangle-right"> </div>
+                      <div id="triangle-right"> </div>
                   </div> <!-- end slider wrapper -->
               </div>
           </section>
@@ -173,6 +173,9 @@
     <script src="js/vendor/modernizr-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
+    <!-- other jQuery -->
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js'></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
 
