structure set and soft facts added

--- a/index.html
+++ b/index.html
@@ -149,6 +149,60 @@
               </div>
           </section>
 
+          <!-- About me Section-->
+          <section class="about-me">
+              <div class="content-wrapper">
+                  <h2> Über mich </h2>
+                    <div class="hard-facts">
+                        <div class="hard-facts-item">
+                            <figure>
+                                <img src="img/education-logo.png" alt="">
+                            </figure>
+                            <div class="text-wrapper">
+                                <p> Master Fremdsprachenlinguistik: </p>
+                                <p> Deutsch als Fremdsprache, Spanisch </p>
+                            </div> <!-- end text wrapper -->
+                        </div> <!-- end hard facts item -->
+
+                    <div class="hard-facts-item">
+                        <figure>
+                            <img src="img/education-logo.png" alt="">
+                        </figure>
+                        <div class="text-wrapper">
+                            <p> ausgebildete Redakteurin </p>
+                        </div> <!-- end text wrapper -->
+                    </div> <!-- end hard facts item -->
+
+                    <div class="hard-facts-item">
+                        <figure>
+                            <img src="img/education-logo.png" alt="">
+                        </figure>
+                        <div class="text-wrapper">
+                            <p> Berufserfahrung <span id="experience-years">7</span> Jahre  </p>
+                        </div> <!-- end text wrapper -->
+                    </div> <!-- end hard facts item -->
+
+                    <div class="hard-facts-item">
+                        <figure>
+                            <img src="img/education-logo.png" alt="">
+                        </figure>
+                        <div class="text-wrapper">
+                            <p> <span id="number-of-projects">26</span> abgeschlossene Projekte  </p>
+                        </div> <!-- end text wrapper -->
+                    </div> <!-- end hard facts item -->
+
+                </div> <!-- end hard facts -->
+
+                    <div class="soft-facts">
+                        <div class="soft-facts-item">
+                            <figure> </figure>
+
+                        </div>
+                    </div> <!-- end soft facts -->
+
+              </div> <!-- end content wrapper -->
+          </section>
+
           <!--- FOOTER -->
           <footer id="copyright">
               <div class="full-width">
