soft fact list and button

--- a/index.html
+++ b/index.html
@@ -153,53 +153,82 @@
           <section class="about-me">
               <div class="content-wrapper">
                   <h2> Über mich </h2>
-                    <div class="hard-facts">
-                        <div class="hard-facts-item">
-                            <figure>
-                                <img src="img/education-logo.png" alt="">
-                            </figure>
-                            <div class="text-wrapper">
-                                <p> Master Fremdsprachenlinguistik: </p>
-                                <p> Deutsch als Fremdsprache, Spanisch </p>
-                            </div> <!-- end text wrapper -->
-                        </div> <!-- end hard facts item -->
+                    <div class="list-wrapper">
+                          <div class="hard-facts">
+                              <div class="hard-facts-item">
+                                  <figure>
+                                      <img src="img/education-logo.png" alt="education-facts-icon">
+                                  </figure>
+                                  <div class="text-wrapper">
+                                      <p> Master Fremdsprachenlinguistik: </p>
+                                      <p> Deutsch als Fremdsprache, Spanisch </p>
+                                  </div> <!-- end text wrapper -->
+                              </div> <!-- end hard facts item -->
 
-                    <div class="hard-facts-item">
-                        <figure>
-                            <img src="img/education-logo.png" alt="">
-                        </figure>
-                        <div class="text-wrapper">
-                            <p> ausgebildete Redakteurin </p>
-                        </div> <!-- end text wrapper -->
-                    </div> <!-- end hard facts item -->
+                          <div class="hard-facts-item">
+                              <figure>
+                                  <img src="img/editor-icon.png" alt="editor-facts-icon">
+                              </figure>
+                              <div class="text-wrapper">
+                                  <p> ausgebildete Redakteurin </p>
+                              </div> <!-- end text wrapper -->
+                          </div> <!-- end hard facts item -->
 
-                    <div class="hard-facts-item">
-                        <figure>
-                            <img src="img/education-logo.png" alt="">
-                        </figure>
-                        <div class="text-wrapper">
-                            <p> Berufserfahrung <span id="experience-years">7</span> Jahre  </p>
-                        </div> <!-- end text wrapper -->
-                    </div> <!-- end hard facts item -->
+                          <div class="hard-facts-item">
+                              <figure>
+                                  <img src="img/experience-icon.png" alt="experience-facts-icon">
+                              </figure>
+                              <div class="text-wrapper">
+                                  <p> Berufserfahrung <span id="experience-years">7</span> Jahre  </p>
+                              </div> <!-- end text wrapper -->
+                          </div> <!-- end hard facts item -->
 
-                    <div class="hard-facts-item">
-                        <figure>
-                            <img src="img/education-logo.png" alt="">
-                        </figure>
-                        <div class="text-wrapper">
-                            <p> <span id="number-of-projects">26</span> abgeschlossene Projekte  </p>
-                        </div> <!-- end text wrapper -->
-                    </div> <!-- end hard facts item -->
+                          <div class="hard-facts-item">
+                              <figure>
+                                  <img src="img/projects-icon.png" alt="projects-finished-icon">
+                              </figure>
+                              <div class="text-wrapper">
+                                  <p> <span id="number-of-projects">26</span> abgeschlossene Projekte  </p>
+                              </div> <!-- end text wrapper -->
+                          </div> <!-- end hard facts item -->
 
-                </div> <!-- end hard facts -->
+                      </div> <!-- end hard facts -->
 
-                    <div class="soft-facts">
-                        <div class="soft-facts-item">
-                            <figure> </figure>
+                          <div class="soft-facts">
+                              <div class="soft-facts-item">
+                                  <figure>
+                                      <img src="img/passion-icon.png" alt="projects-finished-icon">
+                                  </figure>
+                                  <div class="text-wrapper">
+                                      <p> <span id="number-of-projects"> Leidenschaftlich bei dem was ich mache  </p>
+                                  </div> <!-- end text wrapper -->
+                              </div> <!-- end soft facts item -->
 
-                        </div>
-                    </div> <!-- end soft facts -->
+                              <div class="soft-facts-item">
+                                  <figure>
+                                      <img src="img/quality-icon.png" alt="projects-finished-icon">
+                                  </figure>
+                                  <div class="text-wrapper">
+                                      <p> <span id="number-of-projects"> qualitätsorientiert  </p>
+                                  </div> <!-- end text wrapper -->
+                              </div> <!-- end soft facts item -->
 
+                              <div class="soft-facts-item">
+                                  <figure>
+                                      <img src="img/time-money-icon.png" alt="projects-finished-icon">
+                                  </figure>
+                                  <div class="text-wrapper">
+                                      <p> <span id="number-of-projects"> Ich respektiere Ihr Budget und Ihren Zeitrahmen  </p>
+                                  </div> <!-- end text wrapper -->
+                              </div> <!-- end soft facts item -->
+
+                              <div class="soft-facts-item">
+                                  <button class="btn btn-third-level" onclick="location.href='#more-about-me';"> mehr über mich </button>
+                              </div> <!-- end soft facts item -->
+
+                          </div> <!-- end soft facts -->
+
+                  </div> <!-- end of list-wrapper -->
               </div> <!-- end content wrapper -->
           </section>
 
