--- a/index.html
+++ b/index.html
@@ -232,15 +232,22 @@
               </div> <!-- end content wrapper -->
           </section>
 
+          <!-- Questions section -->
+          <section class="questions-sec">
+              <div class="content-wrapper">
+                  <h2> <span class="highlight-text"> Noch Fragen? </span> Möchten Sie mehr wissen? </h2>
+                  <button class="btn btn-third-level" onclick="location.href='#more-about-me';"> mehr über mich </button>
+                  <button class="btn btn-sec-level" id="send-direct-email"> <a href="mailto:contact@theresamannschatz.design"> kontakt </a> </button>
+              </div>
+          </section>
+
           <!--- FOOTER -->
           <footer id="copyright">
               <div class="full-width">
                   <div id="social_media_links">
                       <ul>
-                          <li> <a href="https://www.facebook.com/theresa.mannschatz"> <img src="img/facebook_icon.png" alt="facebook_logo"> </a> </li>
                           <li> <a href="mailto:contact@theresamannschatz.design"> <img src="img/gmail_icon.png" alt="gmail_logo"> </a> </li>
                           <li> <a href="https://wa.me/4915124045227"> <img src="img/icon_whatsapp.png" alt="whatsapp_logo"> </a> </li>
-                          <li> <a href="https://www.facebook.com/theresa.mannschatz"> <img src="img/linkedin_icon.png" alt="linkedin_icon"> </a> </li>
                       </ul>
                   </div>
                   <div class="footer-container">
