adding first background polygon to testiomial section

--- a/index.html
+++ b/index.html
@@ -49,8 +49,16 @@
     <main>
           <section class="hero-image">
              <div class="content-wrapper">
-                  <div>
-                      <h1> Redaktion <hr> Korrektorat <hr> Autorin <hr> Übersetzungen <hr> Unterricht </h1>
+                  <div class="text-wrapper-hero">
+                      <h1> Redaktion </h1>
+                      <hr>
+                      <h1> Korrektorat </h1>
+                      <hr>
+                      <h1> Autorin </h1>
+                      <hr>
+                      <h1> Übersetzungen </h1>
+                      <hr>
+                      <h1> Unterricht </h1>
                   </div>
                   <figure>
                         <img src="img/landingpage-logo.png" alt="page-logo">
@@ -131,8 +139,8 @@
           </section>
 
           <!-- testimonial section -->
-          <section class="testimonial-section">
-              <div class="content-wrapper">
+          <section class="testimonial-section"> <!-- add a shape to the content wrapper -->
+              <div class="content-wrapper" >
                   <div class="testemonie-pic">
                       <figure>
                           <img src="img/testimon-general.png" alt="">
@@ -146,7 +154,9 @@
                       </div>
                       <div id="triangle-right"> </div>
                   </div> <!-- end slider wrapper -->
+                  <div id="bd-shape"> </div>
               </div>
+
           </section>
 
           <!-- About me Section-->
@@ -242,21 +252,17 @@
           </section>
 
           <!--- FOOTER -->
-          <footer id="copyright">
-              <div class="full-width">
-                  <div id="social_media_links">
-                      <ul>
-                          <li> <a href="mailto:contact@theresamannschatz.design"> <img src="img/gmail_icon.png" alt="gmail_logo"> </a> </li>
-                          <li> <a href="https://wa.me/4915124045227"> <img src="img/icon_whatsapp.png" alt="whatsapp_logo"> </a> </li>
-                      </ul>
+          <footer class="copyright">
+                  <div class="content-wrapper">
+                      <a href="mailto:contact@ym.com"> contact@ym.com </a>
                   </div>
+
                   <div class="footer-container">
                       <p> Copyright @ Theresa Mannschatz 2019 </p>
                       <figure>
                         <img id="chamaeleon-footer-brand" src="img/chamaeleon.png" alt="chamaleon-symbol-footer">
                       </figure>
                   </div> <!-- end footer container -->
-              </div>
           </footer>
     </main>
 
