add polygon shape to about section for mobile

--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
                       <img src="img/portrait.png" alt="head-shoot">
                   </figure>
               </div>
+              <div class="shape-wrapper">
+                  <div id="polygon-shape-circle"> </div>
+              </div>
           </section>
 
 
